working on home page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,11 @@
                 <input id="password-input" matInput type="passwrod" placeholder="Password">
               </mat-form-field>
               <button id="login-button" mat-raised-button type="Submit">Login</button>
-          </form>
+              
+              <!-- <br>
+              <button id="register-button" mat-raised-button type="Create Account">Create an Account</button> -->
+
+              <a [routerLink]="['/home']">Don't have an account?</a><!-- ROUTER LINK TO THE CREATE ACCOUNT PAGE ASAP!!!!!!!!!!-->
+            </form>
     </mat-card>
 </div>
