--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -11,14 +11,14 @@
 
 }
 
-// #my-video{
-//     position: fixed;
-//     right: 0;
-//     bottom: 0;
-//     min-width: 100%;
-//     min-height: 100%;
+#my-video{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
     
-// }
+}
 
 #username-input, #password-input{
     background: #303339;
@@ -30,7 +30,7 @@
     
 }
 
-#login-button{
+#login-button, #register-button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -68,12 +68,20 @@
     color:#550798;
   }
   
+
   /* Change label color on focused */
 ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
     color:rgba(255, 255, 255, .38) !important;
   }
   
+
   /* underline border color on focused */
 ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
     background-color:#550798 !important;
-  }
+}
+
+// LINK TEXT TO WHITE
+a{
+      color: rgba(255, 255, 255, 0.38);
+      text-align: right;
+}
