--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -19,7 +19,8 @@
             <mat-form-field >
                 <input id="password-input" matInput type="passwrod" placeholder="Password" FormControlName="password">
               </mat-form-field>
-              <button id="login-button" mat-raised-button type="Submit" onclick="onSubmit()">Login</button>
+              <button id="login-button" mat-raised-button type="Submit">Login</button>
           </form>
+          <button onclick="redirectToSignUp()">Sign Up</button>
     </mat-card>
 </div>
