Fixed some redirects

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,6 @@
               </mat-form-field>
               <button id="login-button" mat-raised-button type="Submit">Login</button>
           </form>
-          <button onclick="redirectToSignUp()">Sign Up</button>
+          <button (click)="redirectToSignUp()">Sign Up</button>
     </mat-card>
 </div>
