--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,43 +1,29 @@
-<div>
-    <div *ngIf="errorMSG">
-        {{errorMSG}}
-    </div>
-</div>
 
-<<<<<<< HEAD
-<form (ngSubmit)="onSubmit()">
-    <input type="text" name="userName" id="userName" placeholder="enter username" [(ngModel)]="user.UserName">
-    <br><br>
-    <input type="password" name="password" id="password" placeholder="enter password" [(ngModel)]="password">
-    <br><br>
-    <input type="password" name="password2" id="password2" placeholder="enter password again" [(ngModel)]="password2">
-    <br><br>
-    <input type="email"  name="email" id="email" placeholder="enter email" [(ngModel)]="email">
-=======
-<form [formGroup]="accountForm" (ngSubmit)="onSubmit()">
 
-    <input type="text" formControlName="name" name="userName" placeholder="Enter Username">
+<form (ngSubmit)="onSubmit()" #registerForm="ngForm">
+    <input type="text" name="userName" id="userName" placeholder="Enter Username" [(ngModel)]="userName" required #username="ngModel">
+    <br>
+    <small *ngIf="username.touched && !username.valid">Enter UserName.</small>
     <br><br>
-    <input type="password" formControlName="password" name="password" placeholder="Enter Password">
+    <input type="password" name="password" id="password" placeholder="Enter Password" [(ngModel)]="password" required #pWord="ngModel">
+    <br>
+    <small *ngIf="pWord.touched && !pWord.valid">Enter Password.</small>
     <br><br>
-    <input type="password" formControlName="conPassword" name placeholder="Confirm Password">
-    <br><br>
-    <input type="email" formControlName="email" name="email" placeholder="Enter Email">
->>>>>>> 1e6c341ac1537814f24ad14f42d2afd1d3e1fe9f
-    <br><br>
-    <input type="checkbox" name="ageBox" id="age">
-    <label>By checking this box you confirm that you are 13 years old or older.</label>
-<<<<<<< HEAD
-    <input type="checkbox" name="termAndConditions">
-=======
->>>>>>> 1e6c341ac1537814f24ad14f42d2afd1d3e1fe9f
-    <br><br>
-    <input type="checkbox" formControlName="term" name="termAndConditions">
+    <input type="password" name="password2" id="password2" placeholder="Confirm Password" [(ngModel)]="password2" required #pWord2="ngModel">
+    <br>
+    <small *ngIf="pWord2.touched && !pWord2.valid">Password Confirmation does not match password.</small>
+    <br>
+    <br>
+    <input type="email"  name="email" id="email" placeholder="Enter Email" [(ngModel)]="email" required #eMail="ngModel">
+    <br>
+    <small *ngIf="eMail.touched && !eMail.valid">Enter email address.</small>
+    <br>
+    <br>
+    <input type="checkbox" name="termAndConditions" required [(ngModel)]="termsAndConditions">
     <label>By checking this box you confirm to agree to our Terms and Conditions.</label>
+    <br>
+    <small *ngIf="errorMSG">{{errorMSG}}</small>
     <br><br>
-<<<<<<< HEAD
-    <button type="submit">Register</button>
-=======
-    <button onclick="onSubmit()">Register</button>
->>>>>>> 1e6c341ac1537814f24ad14f42d2afd1d3e1fe9f
+    <button type="submit" [disabled]="!registerForm.valid">Register</button>
+
 </form>
