--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,45 +1,7 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-
-        <!-- CHANGE TO THE USER'S SELECTED PROFILE PIC FOR LINKUP -->
-        <div style="width: 100%; display: flex; justify-content: center; margin-top: 30px;">
-            <img src="../../assets/tempImage/big-esports-event.jpg" alt="" style="height: 150px; width: 150px; border-radius: 50%;">
-        </div>
-        <!-- CHANGE TO THE USER'S SELECTED USERNAME FOR LINKUP -->
-        <div class="username">
-            <h1>User-X</h1>
-        </div>
-
-
-        <mat-nav-list class="user-personal-information-list">
-            <mat-list-item>
-                <div class="personal">
-                    <h3>Personal</h3>
-                </div>
-            </mat-list-item>
-            <!-- THESE TWO SHOULD BE REPLACED WITH THE USER'S RANKING AND BALANCE -->
-            <mat-card mat-list-item class="user-stats">Player Balance Goes Here</mat-card>
-            <mat-card mat-list-item class="user-stats">Player Ranking Goes Here</mat-card>
-        </mat-nav-list>
-
-        <div class="user-personal-list-div">
-            <mat-nav-list class="user-active-bets-list">
-                <mat-list-item>
-                    <div class="user-active-bets">
-                        <h3>Active Bets</h3>
-                    </div>
-                </mat-list-item>
-                <!-- NG FOR SHOULD GO HERE TO LOOP THROUGH BETS THE USER CURRENTLY HAS OPEN  -->
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <!-- END OF HARDCODED SAMPLE -->
-            </mat-nav-list>
-        </div>
-    </mat-sidenav>
+       <app-user-profile></app-user-profile>
+       </mat-sidenav>
     <mat-sidenav-content>
         <mat-toolbar class="toolbar">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
