--- a/src/app/activematches/activematches.component.css
+++ b/src/app/activematches/activematches.component.css
@@ -1,28 +1,41 @@
 .bottom-container {
-    background-color: #121212;
+    opacity: 99%;
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #121212;
     position: relative;
     height: 55%;
-    overflow-y: auto;
+    background: rgba(18, 18, 18, 0.9);
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
 }
 
 .match-game-container {
-    background-color: #121212;
     width: 90%;
     display: grid;
+    overflow-y: scroll;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 20px;
+}
+
+::-webkit-scrollbar {
+    background: transparent;
+    overflow: visible;
+    max-width: 50px;
+    max-height: 50px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
 }
 
 .match-game-box {
     height: 500px;
     color: white;
     position: relative;
-    overflow-y: auto;
 }
 
 .match-game-box::-webkit-scrollbar {
@@ -30,11 +43,12 @@
 }
 
 .match-game-entry {
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     background-color: #2E2E2E;
     color: white;
     text-align: center;
+    max-height: 124px;
+    margin-right: 10px;
 }
 
 .teamImage {
