--- a/src/app/exploregames/exploregames.component.html
+++ b/src/app/exploregames/exploregames.component.html
@@ -1,8 +1,8 @@
-<div class="explore-popular">
-    <h1>Explore Games</h1>
-</div>
-<div class="popular-game-wrapper">
-    <div class="popular-game-entry lol" [routerLink]="['/games','lol']"></div>
-    <div class="popular-game-entry csgo" [routerLink]="['/games','csgo']"></div>
-    <div class="popular-game-entry dota2" [routerLink]="['/games','dota2']"></div>
+<h1 class="explore-popular">EXPLORE GAMES</h1>
+<div class="bottom-container">
+    <div class="popular-game-wrapper">
+        <div class="popular-game-entry lol" [routerLink]="['/games','lol']"></div>
+        <div class="popular-game-entry csgo" [routerLink]="['/games','csgo']"></div>
+        <div class="popular-game-entry dota2" [routerLink]="['/games','dota2']"></div>
+    </div>
 </div>
