--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -2,7 +2,7 @@
     padding: 0px;
     background: rgba(18, 18, 18, 0.9);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-radius: 10;
+    border-radius: 10px;
 }
 
 .login-form {
