--- a/src/app/matchpage/matchpage.component.css
+++ b/src/app/matchpage/matchpage.component.css
@@ -9,6 +9,25 @@
     background-color: #121212;
 }
 
+.match-game-header {
+    opacity: 99.9%;
+    filter: drop-shadow(0 5px 3px black);
+    color: rgba(255, 255, 255, 1);
+    font-size: 30px;
+    padding-left: 20px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#my-video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    filter: blur(20px)
+}
+
 h3 {
     color: rgba(255, 255, 255, .39);
 }
@@ -19,7 +38,12 @@ h1 {
 
 .sidenav {
     width: 300px;
-    background-color: #1e1e1e;
+    background: rgba(18, 18, 18, 0.9);
+    padding: 10px 10px 10px 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .sidenav .mat-toolbar {
@@ -91,7 +115,6 @@ h1 {
 }
 
 .bottom-container {
-    background-color: #121212;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -112,7 +135,8 @@ h1 {
 }
 
 .match-game-box {
-    height: 500px;
+    height: 90%;
+    width: 90%;
     color: white;
     position: relative;
     overflow-y: auto;
@@ -136,16 +160,8 @@ h1 {
     padding: 10px
 }
 
-.user-stats {
-    margin-top: 10px;
-    margin-bottom: 5px;
-    background-color: #2E2E2E;
-    color: rgba(255, 255, 255, .60);
-}
-
 .explore-popular,
-.popular-game-wrapper,
-.match-game-header {
+.popular-game-wrapper {
     margin-left: 5%;
 }
 
@@ -163,4 +179,13 @@ h1 {
  ::-webkit-scrollbar {
     width: 0;
     height: 0;
+}
+
+.bottom-container {
+    opacity: 99%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: rgba(18, 18, 18, 0.9);
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
 }
