--- a/src/app/matchpage/matchpage.component.html
+++ b/src/app/matchpage/matchpage.component.html
@@ -1,46 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav #drawer class="sidenav" fixedInViewport [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'" [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
-
-        <!-- CHANGE TO THE USER'S SELECTED PROFILE PIC FOR LINKUP -->
-        <div style="width: 100%; display: flex; justify-content: center; margin-top: 30px;">
-            <img src="../../assets/tempImage/big-esports-event.jpg" alt="" style="height: 150px; width: 150px; border-radius: 50%;">
-        </div>
-        <!-- CHANGE TO THE USER'S SELECTED USERNAME FOR LINKUP -->
-        <div class="username">
-            <h1>User-X</h1>
-        </div>
-
-
-        <mat-nav-list class="user-personal-information-list">
-            <mat-list-item>
-                <div class="personal">
-                    <h3>Personal</h3>
-                </div>
-            </mat-list-item>
-            <!-- THESE TWO SHOULD BE REPLACED WITH THE USER'S RANKING AND BALANCE -->
-            <mat-card mat-list-item class="user-stats">Player Balance Goes Here</mat-card>
-            <mat-card mat-list-item class="user-stats">Player Ranking Goes Here</mat-card>
-        </mat-nav-list>
-
-        <div class="user-personal-list-div">
-            <mat-nav-list class="user-active-bets-list">
-                <mat-list-item>
-                    <div class="user-active-bets">
-                        <h3>Active Bets</h3>
-                    </div>
-                </mat-list-item>
-                <!-- NG FOR SHOULD GO HERE TO LOOP THROUGH BETS THE USER CURRENTLY HAS OPEN  -->
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <mat-card mat-list-item class="user-stats">Active Bets Go Here</mat-card>
-                <!-- END OF HARDCODED SAMPLE -->
-            </mat-nav-list>
-        </div>
+        <app-user-profile></app-user-profile>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content style="opacity:90%">
+        <video id="my-video" muted loop autoplay oncanplay="this.muted=true" oncanplay="this.play()" onloadedmetadata="this.muted=true">
+            <source src="../../assets/video-temporary/lallin.mp4" type="video/mp4">
+            Your browser does not support HTML5 video.
+        </video>
+
         <mat-toolbar class="toolbar">
             <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="drawer.toggle()" *ngIf="isHandset$ | async">
           <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
@@ -50,21 +17,21 @@
           <!-- <mat-icon aria-hidden="false" aria-label="search bar icon">search</mat-icon> -->
         </span>
         </mat-toolbar>
-        <!-- Add Content Here -->
-        <!-- HOME PAGE BEGINS HERE -->
         <app-exploregames></app-exploregames>
-        <!--  ACTIVE MATCHES  TODO: Write and NG-FOR to populate with current matches -->
-        <!-- NOTE: THE APPERANCE IS GOING TO CHANGE. I JUST TO MAKE SURE THAT EVERYTHING PLUGS IN NICELY -->
-        <!-- PS:   THE 'BOTTOM CONTAINER WILL BE SHIFTED UP TO MATCH THE AESTHETIC OF THE DESIGN' -->
         <br>
         <h1 class="match-game-header">Current Match</h1>
         <div class="bottom-container">
-            <div class="match-game-container">
-                <div class="match-game-box">
-                    {{Match?.name}} {{Match?.official_stream_url}}
+            <div class="match-game-box">
+                <mat-card class="match-game-entry">
                     <img class="teamImage" src="{{Match.opponents[0].opponent.image_url}}">
-                </div>
+                    <img class="teamImage" src="{{Match.opponents[1].opponent.image_url}}">
+                    <div>
+                        {{Match?.name}}
+                    </div>
+                    <div>{{Match?.official_stream_url}}</div>
+                </mat-card>
             </div>
+
             <!-- THE FOLLOWING IS NOT QUITE WORKING - WILL FIGURE OUT LATER IF NEEDED -->
             <!-- <div class="match-game-box">
             <h2>New Games</h2>
