--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -9,8 +9,25 @@
     background-color: #121212;
 }
 
+.logout-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    color: rgba(255, 255, 255, 0.87);
+    background: #550798;
+    margin-left: 25px;
+}
+
+.homepage-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    color: rgba(255, 255, 255, 0.87);
+    background: #550798;
+}
+
 h3 {
-    color: rgba(255, 255, 255, .39);
+    color: rgba(255, 255, 255, .87);
 }
 
 h1 {
@@ -38,6 +55,20 @@ h1 {
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
+}
+
+.personal {
+    color: rgba(255, 255, 255, 1);
+    padding-left: 10px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.user-active-bets {
+    color: rgba(255, 255, 255, 1);
+    padding-left: 10px;
+    font-weight: 400;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
