--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -170,7 +170,7 @@ h1 {
 .user-stats {
     margin-top: 10px;
     margin-bottom: 5px;
-    background-color: #2E2E2E;
+    background-color: #25262c;
     color: rgba(255, 255, 255, .60);
 }
 
