--- a/src/app/matchpage/matchpage.component.css
+++ b/src/app/matchpage/matchpage.component.css
@@ -11,6 +11,7 @@
 
 .match-game-header {
     opacity: 99.9%;
+    margin-top: 20px;
     filter: drop-shadow(0 5px 3px black);
     color: rgba(255, 255, 255, 1);
     font-size: 30px;
